--- a/package.json
+++ b/package.json
@@ -26,12 +26,11 @@
   "dependencies": {
     "bcrypt-as-promised": "^1.1.0",
     "body-parser": "^1.15.2",
-    "consolidate": "^0.14.5",
+    "ejs": "^2.5.5",
     "express": "^4.14.0",
     "knex": "^0.12.6",
     "path": "^0.12.7",
     "pg": "^6.1.2",
-    "serve-favicon": "^2.3.2",
-    "swig": "^1.4.2"
+    "serve-favicon": "^2.3.2"
   }
 }
