--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Tri-peaks solitaire project implementing a tree data structure",
     "main": "server.js",
     "scripts": {
+        "start": "node server.js",
         "test": "echo \"Error: no test specified\" && exit 1",
         "heroku-postbuild": "knex migrate:latest"
     },
